# mengchuangjianghe-input-method

./: .gitignore  README.md  exclude.txt
asr_deploy/: README.md  build.gradle.kts  settings.gradle.kts
mengbox_input_android/: NOTICE  settings.gradle.kts
mengbox_input_android/app/: .gitignore  build.gradle.kts
mengbox_input_android/app/src/main/assets/: char_frequency_weights.txt  pinyin_words_extended_batch_a.txt  pinyin_words_modern.txt
mengbox_input_android/app/src/main/assets/rime_shared/: README.txt  default.yaml  key_bindings.yaml  luna_pinyin.schema.yaml
mengbox_input_android/app/src/main/cpp/: CMakeLists.txt  rime_jni.cpp
mengbox_input_android/app/src/main/java/com/mengchuangbox/input/: MengBoxInputMethodService.kt  PinyinDict.kt  RimeEngine.kt  RimeJni.kt
mengbox_input_android/app/src/main/jniLibs/: README.txt
mengbox_input_android/app/src/main/res/layout/: input_keyboard_26key.xml
mengbox_input_android/doc/: CLONE_RIME.md  RIME.md
mengbox_input_android/scripts/: build_char_frequency_from_wordlists.py  fetch_rime_shared.ps1  generate_deduped_wordlist_batch.py
mengchuangjianghe-asr/android/: build.gradle.kts
萌创匠盒输入法/: README.txt  build_places_wordlist.py  build_skins.py  build_static.py  index.html
萌创匠盒输入法/skins/: README.txt  build_skin.py  皮肤制作教程.txt
